correct spacing
correct spacing and refactoring source

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
 @charset "Shift_JIS";
 
-/*@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);*/
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 
 
+/*
+    bar width = 5vw
+    bar button width = 15vw (translate 14vw)
+    ìWäJéû : 20 vw
+*/
+
 body {
+    overflow-x: hidden;
+    overflow-y: scroll;
     background-color: #ffffff;
     font-family:"NotoSansJP","ÉqÉâÉMÉmäpÉS Pro W3","ÉÅÉCÉäÉI",sans-serif;
 }
@@ -19,131 +26,123 @@ body {
     font-feature-settings : "palt";
 }
 .fa-white{
+    font-size: 3vw;
     color:#ffffff;
 }
 
 /*Menu bar*/
-#button{
-    position: fixed;
-    margin-top:-24px;
-    margin-left:-8px;
-    width: 100px;
-    height: 105%;
+#menu_bar{
+    position   : fixed;
+    width      : 5vw;
+    height     : 105%;
     background-attachment: fixed;
-    background-color: rgba(0,0,0,0.6);
-    border-style: none;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    background-color  : rgba(0,0,0,0.6);
+    border-style      : none;
+    -webkit-transform : translateX(0);
+    transform         : translateX(0);
     -webkit-transition: 0.5s cubic-bezier(0.75,0,0.175,1);
-    transition: 0.5s cubic-bezier(0.75,0,0.175,1);   
+    transition        : 0.5s cubic-bezier(0.75,0,0.175,1);   
 }
 
-#button img{
- position:center;
- width:40px;
+
+#menu{
+    z-index: 20;
+    position: fixed;
+    height  : 100%;
+    background-color: rgba(0,0,0,0.6);
+    background-attachment: fixed;
+    -webkit-transform : translateX(0);
+    transform         : translateX(0);
+    -webkit-transition: 0.5s cubic-bezier(0.75,0,0.175,1);
+    transition        : 0.5s cubic-bezier(0.75,0,0.175,1);
 }
+
 
 #slide_menu{
     position: fixed;
-    margin-top:-24px;
-    left: -240px;
-    width: 232px;
-    height: 105%;
-    background-color: rgba(0,0,0,0.6);
-    background-attachment: fixed;
+    left    : -15vw;
+    width   : 15vw;
+    height  : 100vh;
     background-repeat: repeat;
-    
+    background-color: rgba(0,0,25,0.6);
+    background-attachment: fixed;
     -webkit-transform: translateX(0);
     transform: translateX(0);
     -webkit-transition: 1s cubic-bezier(0.75,0,0.175,1);
     transition: 1s cubic-bezier(0.75,0,0.175,1);
     
 }
-
-#menu{
-    z-index: 20;
-    position: fixed;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-    background-attachment: fixed;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    -webkit-transition: 0.5s cubic-bezier(0.75,0,0.175,1);
-    transition: 0.5s cubic-bezier(0.75,0,0.175,1);
-}
 #menu:hover {
-    -webkit-transform: translateX(232px);
-    transform: translateX(232px);
+    -webkit-transform: translateX(14vw);
+    transform: translateX(14vw);
 }
-
 #slide_menu img{
-  margin-left:-50px; 
-  width: 240px;
-}
-
-#navi{
-    position: relative;
+  margin-left:-40px; /*Ç»Ç∫Ç©pixï™ÉXÉPÅ[ÉãÇ…âûÇ∂ÇƒÇ∏ÇÍÇÈÇÃÇ≈pxï\ãL*/ 
+  width: 14vw;
 }
 
 
 /*Header*/
 #maintop{
-    background-image: url(../image/top.png); 
+    background-image   : url(../image/top.png); 
     background-position: center center;
-    background-repeat: no-repeat;
-    background-size:cover;
-    width : 100vw;
-    height: 80vh;
+    background-repeat  : no-repeat;
+    background-size    : cover;
     top:0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 8vw;
-    color:#ffffff;
-    overflow: hidden;
+    overflow   : hidden;
+    width      : 100vw;
+    height     : 80vh;
     margin-left:-10px;
-    margin-top:-10px;
-    font-family: 'Roboto', sans-serif;
-    z-index:1;
+    margin-top :-10px;
+    z-index:1  ;
 }
 
 #maintop_text{
+    font-family: 'Roboto', sans-serif;
+    font-size  : 8vw;
+    color      :#ffffff;
     text-align:left;
     position:absolute;
     bottom:25vh;
-    left  :12vw;
+    left  :10vw;
 }
 
-#update{
+
+.contents_blackbg {
+    float:left;
     z-index:0;
     background-color: #000000;
     width: 100vw;
     margin-left  :-10px;
-    margin-top   :-35px;   
-    padding-top  : 20px;
-    padding-left : 12vw;
-    padding-right: 12vw;
-    color: #cacaca;
+    margin-top   :-25px;   
 }
 
-.contents1 {
+.contents_blackbg_text {
+    color: #cacaca;
+    font-family:"NotoSansJP""ÉqÉâÉMÉmäpÉS Pro W3","ÉÅÉCÉäÉI",sans-serif;
+    font-weight:500;
+    font-feature-settings : "palt";
+
+    padding  : 2vh 10vw 4vh 10vw;
+}
+
+
+.contents_whitebg {
     float:left;
     z-index:0;
-    width         : 70vw;
-    margin-top    : 10vh;
-    margin-left   :-10px;
-    padding-left  : 12vw;
-    padding-right : 12vw;
-    color:#464646;
+    width        : 100vw;
+    margin-left  :-10px;
+    margin-top   :-25px;   
 }
 
-
-.contents2 {
-    z-index:0;
-    width         : 100vw;
-    margin-left   :-10px;
-    padding-left  : 12vw;
-    padding-right : 5vw;
-    color:#464646;
+.contents_whitebg_text {
+    color: #464646;
+    font-family:"NotoSansJP""ÉqÉâÉMÉmäpÉS Pro W3","ÉÅÉCÉäÉI",sans-serif;
+    font-weight:500;
+    font-feature-settings : "palt";
+    padding  : 4vh 10vw 4vh 10vw;
 }
+
 
 
 
@@ -196,16 +195,16 @@ body {
     overflow    : hidden;
     margin-left :-10px  ;
     margin-top  :-10px  ;
-    padding-top : 10vh   ;
-    padding-left: 12vw   ;
     z-index:1;
 }
 
 #head_text{
     font-family: 'Roboto', sans-serif;
-    font-size  : 6vw;
-    color      : #ffffff;
-    position   : absolute;
+    font-size   : 6vw    ;
+    color       : #ffffff;
+    top         : 10vh;
+    padding-left: 10vw   ;
+    position    : absolute;
 }
 
 
@@ -214,29 +213,15 @@ body {
 
 
 /*member page*/
-
-#mem_undergrad {
-    float:left;
-    z-index:0;
-    width         : 90vw;
-    margin-left   :-10px;
-    padding-left  : 12vw;
-    padding-right : 5vw;
-    color:#464646;
-
-}
-
-
 .membox {
     background-color:#f0f0f0;
 
     float:left;
     display:block;
     width:400px;
-    margin:10px 10px 10px 10px;
+    margin :10px 10px 10px  0px;
     padding:10px 10px 10px 10px;
 }
-
 
 .mbtable td:nth-child(1)
 {
@@ -250,8 +235,7 @@ body {
     padding-right:10px;
 }
 
-
-.mbimg{
+.mbtable img{
     width:150px;
 }
 
@@ -261,33 +245,27 @@ body {
 
 /*publication page*/
 .PubList {
-    color:#464646;
-    font-family: 'NotoSansJP';
-    font-weight:400;
-    font-feature-settings : "palt";
 }
 ol.PubList{
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 ol.PubList li{
     text-align    : justify;
-    margin-left   :-40px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 
 
 .FundTable
 {
-    padding: 0.5em 0 0 3em;
 }
 
 .FundTable td:nth-child(1)
 {
     width      :150pt;
     text-align :left;
-    padding: 0.3em 0em 0em 0em;
+    padding    :10px 0em 0em 0px;
 }
 
 .FundTable td:nth-child(2)
